<resources>
    <string name="app_name">Catering</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="edit_profile">edit profile</string>
    <string name="change_password">change password</string>
    <string name="change_avatar">change avatar</string>
    <string name="order_history">order history</string>
    <string name="logout">logout</string>
    <string name="contact_number">contact number</string>
    <string name="email">email</string>
</resources>
